[package]
name = "rain-dao"
version = "1.0.0"
authors = ["rainbing <cnrainbing@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rain-base = { path = "../rain-base" }
rain-model = { path = "../rain-model" }
anyhow = "1.0"
# sqlx = {version = "0.4.2", features = ["runtime-actix-native-tls", "uuid", "postgres", "chrono"]}
# tokio + rustls [runtime-tokio-native-tls or runtime-tokio-rustls or runtime-actix-native-tls or runtime-actix-rustls]
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "mysql", "chrono"] }