[package]
name = "rain-dao"
version = "1.0.0"
authors = ["rainbing <cnrainbing@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rain-base = { path = "../rain-base" }
rain-model = { path = "../rain-model" }
anyhow = "1.0.44"
# tokio + rustls [runtime-async-std-native-tls or runtime-tokio-native-tls or runtime-actix-native-tls]
sqlx = { version = "0.5.7", features = ["runtime-async-std-native-tls", "mysql", "chrono"] }
async-trait = "0.1.51"