[package]
name = "rain-model"
version = "1.0.0"
authors = ["rainbing <cnrainbing@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rain-base = { path = "../rain-base" }
async-graphql = { version = "2.9.15", features = ["chrono", "log"] }
# async-graphql-actix-web = "2.9.15"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
serde-aux = "2.3.0"
validator = { version = "0.14.0", features = ["derive"] }
snowflake = { version = "1.2", features = ["serde_support"] }
chrono = { version = "0.4.19", features = ["serde"] }
async-trait = "0.1.51"
regex = "1.5.4"
lazy_static = "1.4.0"
sqlx = { version = "0.5.7", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }




