[package]
name = "rain-service"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rain-base = { path = "../rain-base" }
rain-model = { path = "../rain-model" }
rain-dao = { path = "../rain-dao" }
async-trait = "0.1.51"
sqlx = { version = "0.5.7", features = ["runtime-actix-native-tls", "mysql", "chrono"] }
anyhow = "1.0.44"